--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "5.4.0"
+    "version": "5.0.0"
   },
   "dependencies": {
     "hexo": "^5.0.0",
@@ -26,6 +26,7 @@
     "hexo-related-popular-posts": "^5.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-kramed": "^0.1.4",
+    "hexo-renderer-pandoc": "^0.3.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
     "hexo-symbols-count-time": "^0.7.1"
